<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:background="@color/white"
            android:id="@+id/top_layout"
            android:orientation="horizontal" >
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/ic_top_1"
                    android:background="@drawable/ic_top_1"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            <TextView
                    style="@style/tv_top_essential_style"
                    android:id="@+id/top_1"
                    android:clickable="true"
                    android:drawablePadding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/home_top_1"
                    android:layout_below="@id/ic_top_1"
                    android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/ic_top_2"
                    android:background="@drawable/ic_top_2"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            <TextView
                    style="@style/tv_top_essential_style"
                    android:id="@+id/top_2"
                    android:layout_below="@id/ic_top_2"
                    android:clickable="true"
                    android:drawablePadding="5dp"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_top_2" />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/ic_top_3"
                    android:background="@drawable/ic_top_3"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            <TextView
                    style="@style/tv_top_essential_style"
                    android:id="@+id/top_3"
                    android:layout_below="@id/ic_top_3"
                    android:clickable="true"
                    android:drawablePadding="5dp"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_top_3" />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/ic_top_4"
                    android:background="@drawable/ic_top_4"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            <TextView
                    style="@style/tv_top_essential_style"
                    android:id="@+id/top_4"
                    android:layout_below="@id/ic_top_4"
                    android:clickable="true"
                    android:drawablePadding="5dp"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_top_4" />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:id="@+id/top_5_layout"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/ic_top_5"
                    android:scaleType="fitXY"
                    android:background="@drawable/ic_top_5"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            <TextView
                    style="@style/tv_top_essential_style"
                    android:id="@+id/top_5"
                    android:layout_below="@id/ic_top_5"
                    android:clickable="true"
                    android:drawablePadding="5dp"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_top_5" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/custom_style_layout_1"
            android:layout_below="@+id/top_layout"
            >

        <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/img1"
                android:scaleType="fitXY"
                android:background="@drawable/detail_1"
                android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:id="@+id/title1"
                  android:textSize="18sp"
                  android:text="@string/custom_style_title"
                  android:textColor="@color/red"
                  android:ellipsize="end"
                  android:layout_alignTop="@+id/img1"
                  android:layout_toRightOf="@+id/img1"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/description1"
                  android:text="@string/custom_style_description"
                  android:textSize="16sp"
                  android:textColor="@color/black"
                  android:maxLines="2"
                  android:padding="10dp"
                  android:layout_alignBottom="@+id/img1"
                  android:layout_alignLeft="@+id/title1"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/custom_style_layout_2"
            android:layout_below="@id/custom_style_layout_1"
            >

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/img2"
                android:scaleType="fitXY"
                android:background="@drawable/img_3"
                android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:background="@color/translucent_white"
                  android:id="@+id/title2"
                  android:textSize="20sp"
                  android:textColor="@color/red"
                  android:singleLine="true"
                  android:text="@string/custom_style_title"
                  android:layout_alignTop="@+id/img2"
                  android:ellipsize="end"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:background="@color/translucent"
                  android:id="@+id/description2"
                  android:textSize="16sp"
                  android:textColor="@color/white"
                  android:maxLines="2"
                  android:text="@string/custom_style_description"
                  android:padding="10dp"
                  android:layout_alignBottom="@+id/img2"
                  android:layout_alignLeft="@+id/title2"/>
    </RelativeLayout>

</RelativeLayout>